:sparkles: automatic url injection

--- a/angular-client/Dockerfile.dev
+++ b/angular-client/Dockerfile.dev
@@ -17,8 +17,9 @@ RUN npm install --global @angular/cli@12
 COPY . .
 
 # env
-#ARG GITPOD_WORKSPACE_URL=${GITPOD_WORKSPACE_URL:-""}
-#ENV NG_APP_GITPOD_WORKSPACE_URL=${GITPOD_WORKSPACE_URL}
+ARG GITPOD_WORKSPACE_URL=${GITPOD_WORKSPACE_URL:-""}
+ENV NG_APP_GITPOD_WORKSPACE_URL=${GITPOD_WORKSPACE_URL}
+ENV SERVER_PORT=3000
 
 EXPOSE 4200
 
