--- a/angular-client/package.json
+++ b/angular-client/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ngx-env/builder": "^2.0.2",
     "@popperjs/core": "2.9.1",
     "angular-google-charts": "^2.2.2",
     "rxjs": "~6.6.0",
