--- a/angular-client/Dockerfile.dev
+++ b/angular-client/Dockerfile.dev
@@ -19,7 +19,7 @@ COPY . .
 # env
 ARG GITPOD_WORKSPACE_URL=${GITPOD_WORKSPACE_URL:-""}
 ENV NG_APP_GITPOD_WORKSPACE_URL=${GITPOD_WORKSPACE_URL}
-ENV SERVER_PORT=3000
+ENV NG_APP_SERVER_PORT=3000
 
 EXPOSE 4200
 
